--- a/configs/configuration.properties
+++ b/configs/configuration.properties
@@ -1,5 +1,6 @@
 environment=local
-browser=chrome
+browser=edge
 windowMaximize=true
 implicitlyWait=5
 baseURL=https://www.demoblaze.com/
+chromeOptions=--incognito
